fixed part of the code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<ul>
 				<li><a href="index.html">About Me</a></li>
 				<li><a href="resume.html">Resume</a></li>
-				<li><a href="music.html">Music/Songs</a>/li>
+				<li><a href="music.html">Music/Songs</a></li>
 			</ul>
 		</nav>
 	</header>
