--- a/music.html
+++ b/music.html
@@ -9,7 +9,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Intro</a></li>
+				<li><a href="index.html">About Me</a></li>
 				<li><a href="resume.html">Resume</a></li>
 				<li><a href="music.html">Music/Songs</a></li>
 			</ul>
@@ -22,7 +22,7 @@
 			<p>Music, one of the most influencial forms of art that the world has ever been able to experience.</p>
 			<p>It has the ability to make people feel different emotions and even tell stories from the artists themselves.</p>
 			<p>It is one of the best thingss because it give you a feeling of connectivity with the artists and bands that created these pieces.</p>
-			<p>Now, here are some of the songs that have been some of the best one that I have listened to and their respective artists/bands</p>
+			<p>Now, here are some of the songs that have been some of the best one that I have listened to and their respective artists/bands.</p>
 		</section>
 		<section id="black_thunder">
 			<h2>Black Thunder by The HU feat. Serjo Tankian & DL of Bad Wolves</h2>
