--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
  <header>
 	<nav>
 		<ul>
-			<li><a href="index.html">Intro</a></li>
+			<li><a href="index.html">About me</a></li>
 			<li><a href="resume.html">Resume/Songs</a></li>
 			<li><a href="music.html">Music</a></li>
 		</ul>
