--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 				<h2>Favorite Songs</h2>
 				<p>Some of my current favorite songs are "Killing My Love" by Leslie Parrish, "Battling My Demons" by BOI WHAT ft. Jeris Johnson, "Lose Control" by Teddy Swims, and finally "Black Sheep" by Metric ft. Brie Larson.</p>
 				<p>There are some more song that I like but if you want to see that, go check out the Music/Songs page!</p>
-				<iframe src="https://www.youtube.com/watch?v=k-yDqLZKUhc" title="Killing My Love by Leslie Parrish"></iframe>
-				<iframe src="https://www.youtube.com/watch?v=vHxPQF85_mE" title="Battling My Demons by BOI WHAT ft. Jeris Johnson"></iframe>
-				<iframe src="https://www.youtube.com/watch?v=XpDEdMu_6O8" title="Lose Control by Teddy Swims"></iframe>
-				<iframe src="https://www.youtube.com/watch?v=1xcSDYy3Dl4" title="Black Sheep by Metric ft. Brie Larson"></iframe>
+				<iframe src="https://www.youtube.com/embed/watch?v=k-yDqLZKUhc" title="Killing My Love by Leslie Parrish"></iframe>
+				<iframe src="https://www.youtube.com/embed/watch?v=vHxPQF85_mE" title="Battling My Demons by BOI WHAT ft. Jeris Johnson"></iframe>
+				<iframe src="https://www.youtube.com/embed/watch?v=XpDEdMu_6O8" title="Lose Control by Teddy Swims"></iframe>
+				<iframe src="https://www.youtube.com/embed/watch?v=1xcSDYy3Dl4" title="Black Sheep by Metric ft. Brie Larson"></iframe>
 			</section>
 	</main>
 </body>
