--- a/music.html
+++ b/music.html
@@ -26,8 +26,8 @@
 		</section>
 		<section id="black_thunder">
 			<h2>Black Thunder by The HU feat. Serjo Tankian & DL of Bad Wolves</h2>
-			<iframe src="https://www.youtube.com/watch?v=KYsmMLvmAQo" title="Black Thunder ft Serj Tankian & DL of Black Wolves(Official Music Video)"></iframe>
-			<iframe src="https://genius.com/The-hu-black-thunder-ft-serj-tankian-and-dl-of-bad-wolves-lyrics" title="Black Thunder Lyrics"></iframe>
+			<iframe src="https://www.youtube.com/embed/watch?v=KYsmMLvmAQo" title="Black Thunder ft Serj Tankian & DL of Black Wolves(Official Music Video)"></iframe>
+			<iframe src="https://genius.com/embed/The-hu-black-thunder-ft-serj-tankian-and-dl-of-bad-wolves-lyrics" title="Black Thunder Lyrics"></iframe>
 			<p>This has been on of the most recent songs that I have started listening to as of the last couple of weeks.</p>
 			<p>When I first listened to it, it was as if I was listening to a tale of a great battle from long ago.
 			One where many were lost and legends were created.</p>
@@ -35,21 +35,21 @@
 		</section>
 		<section id="did_you_see_the_sunrise">
 			<h2>Did You See the Sunrise? by Chogakusei</h2>
-			<iframe src="https://www.youtube.com/watch?v=f34h35xZgl0" title="Kamen Rider BLACK SUN Theme Song FULL - 『Did you see the sunrise?』 by CHOGAKUSEI"></iframe>
+			<iframe src="https://www.youtube.com/embed/watch?v=f34h35xZgl0" title="Kamen Rider BLACK SUN Theme Song FULL - 『Did you see the sunrise?』 by CHOGAKUSEI"></iframe>
 			<p>I Was working on assignments while I had Youtube on autoplay and when I heard it, it was a mix of emotions.</p>
 			<p>It felt as if I were hearing of a hero's motivational speech or a promise that brings about an inspiration or strong emotion into the listener.</p>
 			<p>It really is an amazing song alongside how Chogakusei main lead vocalist gave his all to this song.</p>
 		</section>
 		<section id="plan_z">
 			<h2>Plan Z by BOI WHAT</h2>
-			<iframe src="https://www.youtube.com/watch?v=16bbD1LfG54" title="PLAN Z - Boi What(Official Lyric Video)"></iframe>
+			<iframe src="https://www.youtube.com/embed/watch?v=16bbD1LfG54" title="PLAN Z - Boi What(Official Lyric Video)"></iframe>
 			<p>I have only recently heard this song and it is something that needs to be truly experienced.</p>
 			<p>While this song has the AI-generated voice of Plankton from Spongebob Squarepants, there was still a person that wrote, sang, and produced this beauty 
 			that it feels as if you are hearing Plankton's plan for getting the secret formula.</p>
 		</section>
 		<section id="neon_tide">
 			<h2>Neon Tide by BOI WHAT</h2>
-			<iframe src="https://www.youtube.com/watch?v=wCRftfx62uY" title="Neon Tide - Boi What(Official Lyric Video)"></iframe>
+			<iframe src="https://www.youtube.com/embed/watch?v=wCRftfx62uY" title="Neon Tide - Boi What(Official Lyric Video)"></iframe>
 			<p>This is also another song that I have heard that is still voiced by AI but is still so incredible to listen to!</p>
 			<p>It is a sequel to Plan Z and this one follows up amazingly well when it comes to the lyrics, intensity, and incredible action from Boi What</p>
 		</section>
