Fixed issues with code

--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,12 @@
  <header>
 	<nav>
 		<ul>
-			<li><a href="index.html">About me</a></li>
+			<li><a href="index.html">About Me</a></li>
 			<li><a href="resume.html">Resume/Songs</a></li>
 			<li><a href="music.html">Music</a></li>
 		</ul>
+	</nav>
+<header>
  
  <main>
 	<h1>Resume</h1>
@@ -26,7 +28,7 @@
 		<h2>Skills</h2>
 		<ul>
 			<li>Python</li>
-			<li>Know how to cook different recipes</p>
+			<li>Know how to cook different recipes</li>
 			<li>First Aid certified</li>
 			<li>Professionalism</li>
 			<li>Quick Problem Solving & Decision Making skills</li>
@@ -67,7 +69,7 @@
 	</section>
 	<section id="education">	
 		<h2>Education</h2>
-		<h3>Robert Lindblom Math and Science Academy/ High School Diploma
+		<h3>Robert Lindblom Math and Science Academy/ High School Diploma</h3>
 		<p>Sept 2018 - June 2022, 6130 S Wolcott Avenue, Chicago, IL 60636</p>
 		<ul>
 			<li>Honors English I-IV</li>
@@ -84,8 +86,8 @@
 			<li>Honors Exploring Computer Science, Honors Game Programming I</li>
 			<li>Resource Center I</li>
 		</ul>
-		
 	</section>
+	
 	</main>
 </body>
 </html>
